--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ label {
 }
 
 table {
-    padding-bottom: 15px;
+    padding-bottom: 5px;
     width: 60%;
     margin-left: 2%;
 }
@@ -116,4 +116,8 @@ input:focus {
 .error {
     border-color: #FF0004;
     box-shadow: 0px 0px 3px 1px #FF0004;
+}
+
+#message {
+    visibility: hidden;
 }
